<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- The red text here is actually not a problem, runs fine -->
    <ListPreference
        android:key="@string/pref_theme_key"
        android:title="@string/pref_theme_title"
        android:dialogTitle="@string/pref_theme_title"
        android:entries="@array/pref_theme_entries"
        android:entryValues="@array/pref_theme_values"
        android:defaultValue="@string/pref_theme_default_value"
        android:summary="%s" />

    <ListPreference
        android:key="@string/pref_size_key"
        android:title="@string/pref_size_title"
        android:dialogTitle="@string/pref_size_title"
        android:entries="@array/pref_size_entries"
        android:entryValues="@array/pref_size_values"
        android:defaultValue="@string/pref_size_default_value"
        android:summary="%s" />

</PreferenceScreen>